--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -24,3 +24,9 @@ body,
     right:1em;
     z-index: 200;
 }
+
+/* message */
+.message__self{
+    border-left: 2px solid orange;
+    padding-left: 8px;
+}
