--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,7 +1,7 @@
 html,
 body,
 .app{
-    height: 100vh;
+    height:100%;
     background: #eee;
     padding:1rem;
 }
@@ -11,7 +11,7 @@ body,
 
 .messages {
     overflow-y: scroll;
-    height: 70vh;
+    height:70vh;
 }
 
 /* MessagesForm */
@@ -23,6 +23,10 @@ body,
     left:0;
     right:1em;
     z-index: 200;
+}
+
+.emojipicker{
+    position: absolute;
 }
 
 /* message */
